# local-iceberg-lakehouse

./: .gitignore  Demo.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
src/local_iceberg_lakehouse/: __init__.py  catalog.py  cli.py  query.py  server.py
tests/: test_catalog.py  test_cli.py  test_query.py  test_server.py
