[project]
name = "local-iceberg-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Pequegnot", email = "thomas.pequegnot04@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "duckdb>=1.5.3",
    "mcp>=1.27.2",
    "pyarrow>=24.0.0",
    "pyiceberg[sql-sqlite,sqlite]>=0.11.1",
    "sqlalchemy>=2.0.50",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
