[project]
name = "local-iceberg-lakehouse"
version = "0.1.0"
description = "Local-first data lakehouse with Apache Iceberg and MCP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Thomas Pequegnot", email = "thoma.pequegnot@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.0",
    "mcp>=1.3.0",
    "pyarrow>=19.0.1",
    "pyiceberg[sql-sqlite]>=0.9.0",
    "sqlalchemy>=2.0.38",
    "pandas",
]

[project.scripts]
lakehouse = "local_iceberg_lakehouse.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
